# st-flip-blender

./: .gitignore  LICENSE  README.md  __init__.py  blender_manifest.toml  pyproject.toml
addon/: __init__.py  experiment.py  handlers.py  mesher.py  operators.py  panels.py  properties.py  voxelize.py
docs/: README.md  getting-started.md  object-roles.md  performance-and-scaling.md  recipes.md  rendering-and-export.md  settings-guide.md  troubleshooting.md
stflip/: __init__.py  apertures.py  backend.py  benchmarks.py  cache.py  control.py  experiments.py  forces.py  handoff.py  kernels.py  metrics.py  multigrid.py  paper_validation.py  pressure.py  sampling.py  solver.py  st_implicit.py  step_control.py  surface.py  surface_tension.py  temporal_fit.py  tiles.py  validation.py  velocity.py  viscosity.py  whitewater.py
tests/: test_addon_gpu_helpers.py  test_addon_initial_velocity.py  test_advection_bound.py  test_apertures.py  test_apic.py  test_backend.py  test_benchmarks.py  test_blender_integration_helpers.py  test_cache.py  test_calm_smooth.py  test_calm_surface.py  test_capillary_clamp.py  test_confinement.py  test_control.py  test_energy_metrics.py  test_exact_temporal_norm.py  test_experiments.py  test_forces.py  test_gamma_deformation_mode.py  test_gamma_surface_mode.py  test_handoff.py  test_kernels.py  test_materials.py  test_metrics.py  test_moving_walls.py  test_multigrid.py  test_packaging.py  test_paper_validation.py  test_particle_ids.py  test_pressure.py  test_reflection.py  test_sampling.py  test_sheeting.py  test_smoke_entrypoints.py  test_solver.py  (+17 more)
(+42 files in other folders)
